Bestimmung verfügbar-Spieler auf Tabelle umgestellt